# csbc_schedule_server

./: .env.example  pyproject.toml  some.py
app/: cli.py  db.py  main.py  settings.py  test.py  types.py
app/migrations/: env.py
app/migrations/versions/: 16a888492566_init.py  abae8ed5029c_init.py  b13a5d5e7bb7_init.py  be58b32f4781_init.py  c02e36718bc1_init.py  f3864da7b5a2_init.py
app/services/: auth.py
schedule/: models.py  routers.py  types.py
users/: controllers.py  models.py  routers.py  schemas.py  types.py
